--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div class="timer">
       <span class="seconds"></span>
+      <span class="score"></span>
     </div>
     <div class="cards">
       <div class="card" data-index="1">
