--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <body>
     <h1>Memory game</h1>
     <button class="start-button">Start the game</button>
-    <button class="restart-button">Restart</button>
+    <button class="restart-button">New game</button>
 
     <div class="timer">
       <span class="seconds"></span>
       <span class="score"></span>
     </div>
+
     <div class="cards">
       <div class="card" data-index="1">
         <div class="card__box">
