changing colors of cards,body and start button

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
   <body>
     <h1>Memory game</h1>
     <button class="start-button">Start the game</button>
-    <button class="restart-button">New game</button>
-
     <div class="timer">
-      <span class="seconds"></span>
+      <span class="seconds">0</span>
       <span class="score"></span>
     </div>
 
