adding shuffle, cards are loaded by js

--- a/index.html
+++ b/index.html
@@ -9,142 +9,13 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <h1>Memory game</h1>
+    <h1>Food game</h1>
     <button class="start-button">Start the game</button>
     <div class="timer">
       <span class="seconds">0</span>
       <span class="score"></span>
     </div>
 
-    <div class="cards">
-      <div class="card" data-index="1">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/chicken-nuggets.png" alt="Chicken nuggets" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="2">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/donut.png" alt="Donut" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="3">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/french-fries.png" alt="French fries" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="4">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/hamburger.png" alt="Hamburger" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="5">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/hot-dog.png" alt="Hot-dog" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="6">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/ice-cream.png" alt="Ice-cream" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="7">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/pizza.png" alt="Pizza" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="8">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/popcorn.png" alt="Popcorn" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="1">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/chicken-nuggets.png" alt="Chicken nuggets" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="2">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/donut.png" alt="Donut" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="3">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/french-fries.png" alt="French fries" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="4">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/hamburger.png" alt="Hamburger" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="5">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/hot-dog.png" alt="Hot-dog" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="6">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/ice-cream.png" alt="Ice-cream" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="7">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/pizza.png" alt="Pizza" />
-          </div>
-        </div>
-      </div>
-      <div class="card" data-index="8">
-        <div class="card__box">
-          <div class="card card__front"></div>
-          <div class="card card__back">
-            <img src="images/popcorn.png" alt="Popcorn" />
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="cards"></div>
   </body>
 </html>
