--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button class="start-button">Start the game</button>
     <div class="timer">
       <span class="seconds">0</span>
-      <span class="score"></span>
+      <p><span class="flips">0</span> flips</p>
     </div>
 
     <div class="cards"></div>
